--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -55,6 +55,7 @@
             style="@style/Custom_textinputlayout_filledbox"
             android:theme="@style/Custom_textinputlayout_filledbox"
             android:layout_marginBottom="70dp"
+            app:passwordToggleEnabled="true"
             app:layout_constraintBottom_toTopOf="@id/btn_login"
             app:layout_constraintTop_toBottomOf="@id/input_layout_id">
 
@@ -64,7 +65,7 @@
                 android:backgroundTint="@android:color/transparent"
                 android:hint="Password"
                 android:imeOptions="flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:privateImeOptions="nm"
                 android:textSize="13sp" />
         </com.google.android.material.textfield.TextInputLayout>
