--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -91,10 +91,12 @@
             app:layout_constraintTop_toBottomOf="@id/input_layout_pw" />
 
         <TextView
+            android:id="@+id/tv_register_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:text="아직 회원이 아니신가요?"
+            android:onClick="@{vm::onClickSignUp}"
+            android:text="아직 회원이 아니신가요? 회원가입하기"
             android:textColor="#868686"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
