Fix : Login이 제대로 되지 않던 오류 수정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
 
     <color name="main">#7190FF</color>
     <color name="textColor">@color/black</color>
+
+    <color name="progressBackground">@color/main</color>
 </resources>
