--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -8,6 +8,8 @@
         <variable
             name="vm"
             type="kr.hs.dgsw.jobdongsani_android.viewmodel.SignInViewModel" />
+        
+        <import type="android.view.View"/>
 
     </data>
 
@@ -95,12 +97,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:onClick="@{vm::onClickSignUp}"
             android:text="아직 회원이 아니신가요? 회원가입하기"
             android:textColor="#868686"
+            android:onClick="@{vm::onClickSignUp}"
+            android:bufferType="spannable"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
+            android:progressBackgroundTint="@color/progressBackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
