--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,18 +9,35 @@
         android:id="@+id/homeFragment"
         android:name="kr.hs.dgsw.jobdongsani_android.view.HomeFragment"
         android:label="homeFragment"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_postDetailFragment"
+            app:destination="@id/postDetailFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/searchFragment"
         android:name="kr.hs.dgsw.jobdongsani_android.view.SearchFragment"
         android:label="searchFragment"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_postDetailFragment"
+            app:destination="@id/postDetailFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/profileFragment"
         android:name="kr.hs.dgsw.jobdongsani_android.view.ProfileFragment"
         android:label="profileFragment"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_postDetailFragment"
+            app:destination="@id/postDetailFragment" />
+    </fragment>
 
+    <fragment
+        android:id="@+id/postDetailFragment"
+        android:name="kr.hs.dgsw.jobdongsani_android.view.PostDetailFragment"
+        android:label="postDetailFragment"
+        tools:layout="@layout/fragment_post_detail" />
 </navigation>
