--- a/app/src/main/res/layout/item_recycle_list.xml
+++ b/app/src/main/res/layout/item_recycle_list.xml
@@ -11,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         app:cardCornerRadius="5dp"
-        app:cardElevation="20dp">
+        android:layout_marginBottom="15dp"
+        android:layout_marginHorizontal="5dp"
+        app:cardElevation="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
