--- a/app/src/main/res/layout/item_recycle_post.xml
+++ b/app/src/main/res/layout/item_recycle_post.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="vm"
+            type="kr.hs.dgsw.jobdongsani_android.viewmodel.item.RecycleItemViewModel" />
     </data>
 
     <androidx.cardview.widget.CardView
