--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,5 @@
     <color name="textColor">@color/black</color>
 
     <color name="progressBackground">@color/main</color>
-    <color name="light_grey">#868686</color>
+    <color name="light_grey">#A3A3A3</color>
 </resources>
