--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -52,11 +52,23 @@
             app:layout_constraintTop_toTopOf="@id/guideline">
 
             <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/noto_sans_medium"
+                android:includeFontPadding="false"
+                android:text="플라스틱 쓰레기 팔아요"
+                android:textColor="@color/textColor"
+                android:textSize="15sp" />
+
+            <TextView
                 android:id="@+id/tv_writer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:fontFamily="@font/noto_sans_light"
+                android:fontFamily="@font/noto_sans_medium"
                 android:includeFontPadding="false"
                 android:paddingVertical="15dp"
                 android:text="작성자"
@@ -68,48 +80,24 @@
                 android:layout_height="1dp"
                 android:background="#E3E3E3" />
 
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
-                android:fontFamily="@font/noto_sans_light"
-                android:includeFontPadding="false"
-                android:text="플라스틱 쓰레기 팔아요"
-                android:textColor="@color/textColor"
-                android:textSize="15sp" />
-
             <TextView
                 android:id="@+id/tv_content"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="30dp"
-                android:fontFamily="@font/noto_sans_light"
+                android:fontFamily="@font/noto_sans_medium"
                 android:includeFontPadding="false"
                 android:text="원래 사용하려고 샀다가 필요가 없어져서 팔게 됬습니다.\n상태는 상이고요\n물품 하자 있을시 감가 해드립니다."
                 android:textColor="@color/textColor"
                 android:textSize="11sp" />
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#E3E3E3" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/noto_sans_light"
-                android:paddingTop="30dp"
-                android:paddingBottom="40dp"
+                android:layout_marginTop="60dp"
                 android:text="연락처 : "
                 android:textColor="@color/textColor"
                 android:textSize="11sp" />
