--- a/app/src/main/res/layout/item_share_post.xml
+++ b/app/src/main/res/layout/item_share_post.xml
@@ -7,50 +7,71 @@
 
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="85dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="10dp">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:background="#C4C4C4" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="85dp"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            android:fontFamily="@font/noto_sans_light"
-            android:layout_marginStart="10dp"
-            tools:text="작성자" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#C4C4C4" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#E3E3E3" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/noto_sans_light"
-            android:textColor="@color/textColor"
-            android:textSize="15sp"
-            tools:text="플라스티 쓰레기 나눕니다" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="20dp"
-            android:fontFamily="@font/noto_sans_light"
-            android:textColor="@color/textColor"
-            android:textSize="11sp"
-            tools:text="원래 사용하려고 샀다가 필요가 없어져서 팔게 됐습니다.\n상태는 상이고요\n물품 하자 있을시 감가 해드립니다." />
+            app:layout_constraintStart_toEndOf="@+id/cardView"
+            app:layout_constraintTop_toTopOf="@+id/cardView"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="15dp"
+            android:fontFamily="@font/noto_sans_medium"
+            android:includeFontPadding="false"
+            android:textSize="16sp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/black"
+            tools:text="패딩 기부합니다!!" />
 
+        <TextView
+            android:id="@+id/tv_writer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_regular"
+            android:includeFontPadding="false"
+            android:textColor="@color/black"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="15dp"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/cardView"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title"
+            tools:text="황현빈" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/tv_local"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_regular"
+            android:includeFontPadding="false"
+            android:textColor="@color/light_grey"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/cardView"
+            app:layout_constraintStart_toEndOf="@+id/cardView"
+            android:layout_marginBottom="5dp"
+            android:layout_marginStart="15dp"
+            tools:text="달성군 구지면" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
