--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_homeFragment_to_postDetailFragment"
             app:destination="@id/postDetailFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_writePostFragment"
+            app:destination="@id/writePostFragment" />
     </fragment>
 
     <fragment
@@ -40,4 +43,9 @@
         android:name="kr.hs.dgsw.jobdongsani_android.view.PostDetailFragment"
         android:label="postDetailFragment"
         tools:layout="@layout/fragment_post_detail" />
+    <fragment
+        android:id="@+id/writePostFragment"
+        android:name="kr.hs.dgsw.jobdongsani_android.view.WritePostFragment"
+        tools:layout="@layout/fragment_write_post"
+        android:label="WritePostFragment" />
 </navigation>
