--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -47,5 +47,9 @@
         android:id="@+id/writePostFragment"
         android:name="kr.hs.dgsw.jobdongsani_android.view.WritePostFragment"
         tools:layout="@layout/fragment_write_post"
-        android:label="WritePostFragment" />
+        android:label="WritePostFragment" >
+        <action
+            android:id="@+id/action_writePostFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
