--- a/app/src/main/res/layout/item_recycle_post.xml
+++ b/app/src/main/res/layout/item_recycle_post.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="kr.hs.dgsw.jobdongsani_android.viewmodel.item.RecycleItemViewModel" />
@@ -12,9 +13,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        app:cardCornerRadius="5dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginHorizontal="5dp"
+        android:layout_marginBottom="15dp"
+        app:cardCornerRadius="5dp"
         app:cardElevation="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,59 +24,64 @@
 
             <TextView
                 android:id="@+id/tv_article"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/noto_sans_medium"
                 android:includeFontPadding="false"
-                android:singleLine="true"
+                android:maxLines="1"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="물품 이름" />
 
-            <TextView
-                android:id="@+id/tv_datetime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:fontFamily="@font/noto_sans_light"
-                android:includeFontPadding="false"
-                android:textColor="@color/light_grey"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_article"
-                app:layout_constraintStart_toEndOf="@+id/tv_article"
-                app:layout_constraintTop_toTopOf="@+id/tv_article"
-                tools:text="2021-11-24" />
+            <!--            <TextView-->
+            <!--                android:id="@+id/tv_datetime"-->
+            <!--                android:layout_width="0dp" -->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginStart="15dp"-->
+            <!--                android:fontFamily="@font/noto_sans_light"-->
+            <!--                android:includeFontPadding="false"-->
+            <!--                android:textColor="@color/light_grey"-->
+            <!--                app:layout_constraintBottom_toBottomOf="@+id/tv_article"-->
+            <!--                app:layout_constraintStart_toEndOf="@+id/tv_article"-->
+            <!--                app:layout_constraintTop_toTopOf="@+id/tv_article"-->
+            <!--                tools:text="2021-11-24" />-->
 
             <TextView
                 android:id="@+id/tv_kind"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/noto_sans_medium"
                 android:includeFontPadding="false"
-                android:singleLine="true"
+                android:maxLines="1"
                 android:textColor="@color/black"
                 android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_article"
                 app:layout_constraintTop_toBottomOf="@+id/tv_article"
                 tools:text="종류 : 캔" />
 
             <TextView
                 android:id="@+id/tv_recycle_way"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:fontFamily="@font/noto_sans_medium"
                 android:includeFontPadding="false"
-                android:singleLine="true"
+                android:maxLines="1"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="@+id/tv_kind"
                 app:layout_constraintTop_toBottomOf="@+id/tv_kind"
                 tools:text="분리수거 방법 : 씻어서 캔에 버리기" />
