--- a/app/src/main/res/layout/fragment_write_post.xml
+++ b/app/src/main/res/layout/fragment_write_post.xml
@@ -15,10 +15,9 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:context=".WritePostFragment">
 
@@ -70,10 +69,18 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
-                android:onClick="@{}"
                 android:src="@drawable/ic_image_picker"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layout_appbar" />
+
+            <ImageView
+                android:id="@+id/iv_thumnail"
+                android:visibility="gone"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:layout_marginVertical="10dp"/>
 
             <View
                 android:id="@+id/view3"
@@ -150,6 +157,10 @@
                 android:textColor="@color/black"
                 android:textSize="13sp" />
 
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_write_post"
