[UPDATE] Search Adapter

--- a/app/src/main/res/layout/item_search_post.xml
+++ b/app/src/main/res/layout/item_search_post.xml
@@ -8,6 +8,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:paddingHorizontal="15dp"
         android:paddingVertical="20dp"
@@ -23,6 +24,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <ImageView
+                android:id="@+id/iv_thumnail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:src="@drawable/ic_launcher_foreground" />
