--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -22,6 +22,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:id="@+id/tv_thumbnail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#C4C4C4" />
@@ -93,6 +94,7 @@
                 android:textSize="11sp" />
 
             <TextView
+                android:id="@+id/tv_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
