--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="vm"
+            type="kr.hs.dgsw.jobdongsani_android.viewmodel.SearchViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -43,6 +45,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginHorizontal="10dp"
+                        android:text="@={vm.searchWord}"
                         android:backgroundTint="@android:color/transparent"
                         android:fontFamily="@font/noto_sans_light"
                         android:includeFontPadding="false"
@@ -53,11 +56,13 @@
 
 
             <TextView
+                android:id="@+id/btn_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="15dp"
                 android:fontFamily="@font/noto_sans_light"
+                android:onClick="@{()->vm.searchBoards()}"
                 android:text="검색"
                 android:textColor="#657CF6" />
 
