--- a/app/src/main/res/layout/item_recycle_post.xml
+++ b/app/src/main/res/layout/item_recycle_post.xml
@@ -11,6 +11,7 @@
     </data>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_marginHorizontal="5dp"
